@@ -170,8 +170,8 @@ AC_CONFIG_FILES([include/Makefile include/LHAPDF/Makefile])
 AC_CONFIG_FILES([examples/Makefile])
 AC_CONFIG_FILES([tests/Makefile])
 AC_CONFIG_FILES([doc/Makefile doc/Doxyfile])
-AC_CONFIG_FILES([lhapdf-config])
-AC_CONFIG_FILES([lhapdf])
+AC_CONFIG_FILES([lhapdf lhapdf-config])
+AC_CONFIG_FILES([lhapdf.pc])
 AC_CONFIG_FILES([wrappers/Makefile])
 AC_CONFIG_FILES([wrappers/python/Makefile wrappers/python/setup.py])
 dnl AC_CONFIG_FILES([wrappers/octave/Makefile])
